Bug 1372156 - Color+[U]Int formats should have maxSamples=0. r=lsalzman

MozReview-Commit-ID: 22PoVlplJNT

Differential Revision: https://phabricator.services.mozilla.com/D18900

--HG--
extra : moz-landing-system : lando